--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -14,7 +14,9 @@
 *::before {
   box-sizing: border-box;
 }
-
+.ant-image-mask {
+  display: none;
+}
 html,
 body {
   height: 100%;
@@ -43,7 +45,7 @@ body {
     background-color: transparent;
   }
 }
-.grecaptcha-badge{
+.grecaptcha-badge {
   display: none !important;
 }
 h1,
@@ -1901,19 +1903,19 @@ a.default-btn {
 }
 .stamp {
   position: relative;
-  
+
   &:after {
-    border: .1em solid rgba(8,82,11,.7);
-    -moz-border-radius: .2em;
-    border-radius: .2em;
+    border: 0.1em solid rgba(8, 82, 11, 0.7);
+    -moz-border-radius: 0.2em;
+    border-radius: 0.2em;
     text-align: center;
-    color: rgba(8,82,11,.7);
+    color: rgba(8, 82, 11, 0.7);
     content: "Order Placed";
     font-size: 192%;
     font-weight: 700;
     line-height: 1;
     position: absolute;
-    padding: .1em .5em;
+    padding: 0.1em 0.5em;
     margin: 0 auto;
     top: 10%;
     left: 10%;
@@ -1921,13 +1923,12 @@ a.default-btn {
     opacity: 0;
     transform-origin: 50% 50%;
     transform: rotate(-2deg) scale(5);
-    transition: all .3s cubic-bezier(0.6, 0.04, 0.98, 0.335);
+    transition: all 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335);
   }
-
 }
 
 .loaded .stamp:after {
-    opacity: .75;
-    transform: rotate(-15deg) scale(1);
-    z-index: 0;
- }
+  opacity: 0.75;
+  transform: rotate(-15deg) scale(1);
+  z-index: 0;
+}
